src/web/OpenCytoVisualization.css
@charset 'utf-8';

/* Error code from R */
pre {
    text-align: center;
}

/* Class specs */
.right-text {
    text-align: right;
}

.centered-text {
    text-align: center;
}

.bold-centered-text {
    font-weight: bold;
    text-align: center;
}

.bold-text {
    font-weight: bold;
}

.centered-table {
    margin: auto;
}

.checkBoxWithLeftMargin {
    margin-left: 25px !important;
}

.x-mask-loading {
    /*left: 0 !important;*/
    width: 100% !important;
}

.infoMask {
    width: 100% !important;
}

.infoMask div {
    background-color: white;
    cursor: default;
    font-weight: bold;
    text-align: center;
}

ul.x-tab-strip-top {
    padding-top: 0px;
}

/* Buttons */
.x-btn {
    margin: auto;
}

/* Ext4 */
.x4-btn-inner {
    padding-left: 4px;
    padding-right: 4px;
}

/* jQuery Drag and drop tweaks */
.ux-lovcombo-list-item-all {
    font-weight: bold;
}

.draggableHandle {
    cursor: move;
}

.ui-state-highlight {
    width: 1em;
    line-height: 1.2em;
}

.ui-sortable-helper {
    list-style-type: none;
}
/********************************/

/* Ext TabPanel fixes */
.x-tab-strip {
    margin: 0;
    padding-left: 5px;
}

.x-tab-panel-header {
    padding: 0;
}

.x-tab-right {
    border-bottom-width: 0px !important;
}
/********************************/

/* ExtJS GridPanel */
/* Override standard grid styles (add color to vertical grid lines) */
.x-grid3-col {
    border-left:  1px solid #EEEEEE;
    border-right: 1px solid #D2D2D2;
}

/* Also remove padding from table data (to compensate for added grid lines) */
.x-grid3-row td, .x-grid3-summary-row td {
    padding-left: 0px;
    padding-right: 0px;
}

.x-grid3-hd-row {
    text-align: center;
}

.x-grid3-header-offset {
    width: auto !important;
}
/*************************************/

/* jQuery Drag and drop tweaks */
.sortable-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.sortable-list li {
    margin: 3px 5px 3px 5px; /* 0.2em 0.3em 0.2em 0.3em */
    padding: 1px;
    color: black;
    float: left;
    font-size: 1em;
    font-weight: bold;
    text-align: center;
}
/**********************************/

.ulList {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.ulList li {
    margin: 3px 5px 3px 5px; /* 0.2em 0.3em 0.2em 0.3em */
    padding: 1px;
    float: left;
}

/*****************************/
/* Individual elements specs */
/*****************************/

#resultImage {
    /*height: 480;*/
    /*width: 90%;*/
}

#resultImage-rzwrap {
    margin: 0 auto;
}

